projects/nx/src/apps/*sso/yaldap/security/allow-from-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-yaldap-from-traefik
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from Traefik to Yaldap pods on port 389 (LDAP).
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: yaldap
      app.kubernetes.io/name: yaldap
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 389
          protocol: TCP
